# utf8converter

./: Makefile.am  README  autogen.sh  clean.sh  configure.ac
commonlib/: .cproject  .project  LogTrace.cpp  Makefile.am
commonlib/.deps/: libcommon_a-LogTrace.Po  libcommon_la-LogTrace.Plo
commonlib/.libs/: libcommon.lai  libcommon.so.0.0.0
include/: LogTrace.h
test/: Makefile.am  main.cpp  test
test/.deps/: test-main.Po
test/.libs/: lt-test  test
